package Employees;

public interface IEmployeeInfoProvider {
    String type();
    String name();
}
